fix(mdChipRemove): center vertically on Firefox

--- a/src/components/chips/chips.scss
+++ b/src/components/chips/chips.scss
@@ -94,6 +94,7 @@ $contact-chip-name-width: rem(12) !default;
       box-shadow: none;
       margin: 0;
       position: relative;
+      vertical-align: middle;
       md-icon {
         height: $chip-delete-icon-size;
         width: $chip-delete-icon-size;
